fixed nav bar layout issue

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -85,7 +85,8 @@ div.package.panel {
   text-align: center;
 }
 
-.six2, .row .six2 { width: 55.1%; }
+.six2, .row .six2 { width: 63.7%; }
+
 .nav_color ul li a:hover {
   background-color: #D41D29;
 }
